# pivotal

./: .gitignore  .travis.yml  Hlint.hs  README.md  package.yaml  pivotal.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs  Pivotal.hs
src/Pivotal/: Extract.hs  Format.hs  Lib.hs  Options.hs  Person.hs  Types.hs  Url.hs
test/: LibSpec.hs
